WIP: staged changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
-/frontend/public/*
-!/frontend/public/index.html
-!/frontend/public/manifest.json
+# /frontend/public/*
+# !/frontend/public/index.html
+# !/frontend/public/manifest.json 
 *.glb
 *.gltf
 *.obj
